@@ -1,1 +1,1 @@
-frames=7
+frames=6
